--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,8 +8,8 @@
     tools:context=".SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:lottie_rawRes="@raw/lottie1"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
