--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -88,7 +88,7 @@
             android:background="@color/light_gray"/>
 
         <LinearLayout
-            android:id="@+id/myPlaceLayout"
+            android:id="@+id/myWorkLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
