--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -25,6 +25,7 @@
             android:id="@+id/changeNickLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:tag="nickname"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
