#2 ViewPager2 +  Tablayout 연결

--- a/app/src/main/res/layout/activity_my_friends.xml
+++ b/app/src/main/res/layout/activity_my_friends.xml
@@ -11,10 +11,12 @@
         tools:context=".settings.MyFriendsActivity">
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/friendListViewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
