--- a/app/src/main/res/layout/activity_add_friends.xml
+++ b/app/src/main/res/layout/activity_add_friends.xml
@@ -6,6 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="20dp"
         tools:context=".ui.settings.AddFriendsActivity">
 
