--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,27 @@
             android:layout_marginTop="10dp"
             android:background="#0066FF"
             android:text="회원가입"/>
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="3초만에 간단 가입"/>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/kakaoLoginBtn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/kakao_login_icon"/>
+
+        </LinearLayout>
 
 
     </LinearLayout>
