#2 약속 추가하는 엑티비티 작성

--- a/app/src/main/res/layout/fragment_invited_appointments.xml
+++ b/app/src/main/res/layout/fragment_invited_appointments.xml
@@ -7,11 +7,24 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="초대받은 약속 Frag"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/invitedAppointmentRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <Button
+                android:id="@+id/addAppointmentBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="약속 추가"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="15dp"/>
+
+        </FrameLayout>
     </LinearLayout>
-
 </layout>
