--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue_600">#0066FF</color>
     <color name="light_gray">#DFDFDF</color>
+    <color name="white_00">#00FFFFFF</color>
 </resources>
