#2 약속 일시를 사용자에게 받아서 저장

--- a/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/app/src/main/res/layout/activity_edit_appointment.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:background="@drawable/lightgray_retacgle_r6"
                 android:padding="15dp"
                 android:textSize="16sp"
                 android:text="일자 선택"/>
@@ -50,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:background="@drawable/lightgray_retacgle_r6"
                 android:padding="15dp"
                 android:textSize="16sp"
                 android:text="시간 선택"/>
