--- a/app/src/main/res/layout/fragment_my_appointments.xml
+++ b/app/src/main/res/layout/fragment_my_appointments.xml
@@ -17,7 +17,9 @@
                 android:id="@+id/dateTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="날짜 자리" />
+                android:text="날짜 자리"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <ImageView
                 android:id="@+id/arrowImg"
